# sp

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: design.md
examples/: sp.toml
scripts/: demo-repo.sh
src/: config.rs  git.rs  main.rs  model.rs  ops.rs  ui.rs  util.rs
